<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/inicioFragment">

    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.javiergamez.catalogoui.views.secciones.InicioFragment"
        android:label="@string/titulo_inicio" />

    <fragment
        android:id="@+id/seccion1Fragment"
        android:name="com.javiergamez.catalogoui.views.secciones.Seccion1Fragment"
        android:label="@string/seccion1" />

    <fragment
        android:id="@+id/seccion2Fragment"
        android:name="com.javiergamez.catalogoui.views.secciones.EnConstruccionFragment"
        android:label="@string/seccion2" />

    <fragment
        android:id="@+id/seccion3Fragment"
        android:name="com.javiergamez.catalogoui.views.secciones.EnConstruccionFragment"
        android:label="@string/seccion3" />

    <fragment
        android:id="@+id/seccion4Fragment"
        android:name="com.javiergamez.catalogoui.views.secciones.EnConstruccionFragment"
        android:label="@string/seccion4" />

    <fragment
        android:id="@+id/seccion5Fragment"
        android:name="com.javiergamez.catalogoui.views.secciones.EnConstruccionFragment"
        android:label="@string/seccion5" />

    <fragment
        android:id="@+id/seccion6Fragment"
        android:name="com.javiergamez.catalogoui.views.secciones.EnConstruccionFragment"
        android:label="@string/seccion6" />

</navigation>
